--- a/flow_market/templates/flow_market/MarketPage.html
+++ b/flow_market/templates/flow_market/MarketPage.html
@@ -48,15 +48,15 @@ Page title
     var orderGraph = new OrderGraph();
     orderGraph.show();
 
-    var updateMarketPage = window.setInterval(function () {
-        liveSend({
-            'message_type': 'update'
-        })
-    }, 1000);
+    // var updateMarketPage = window.setInterval(function () {
+    //     liveSend({
+    //         'message_type': 'update'
+    //     })
+    // }, 1000);
 
     function liveRecv(data) {
-        console.log('received ', data)
-        if (data['message_type'] == 'update') {
+        orderBook.update(data['data'])
+        if (data['message_type'] == 'add_order') {
             orderBook.update(data['data'])
         }
     }
